--- a/app/globals.css
+++ b/app/globals.css
@@ -374,3 +374,22 @@
   font-weight: 600;
   color: #384262;
 }
+
+.bg-paypal-gold {
+  background-color: #ffc439; /* PayPal gold color */
+  color: #000; /* Black text color for better contrast */
+  border: none; /* Remove any border */
+}
+.bg-paypal-gold:hover {
+  background-color: #e6b800; /* Slightly darker on hover */
+}
+.best-value-tag {
+  background-color: #ff6347; /* Tomato color */
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: bold;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+}
